Make header fixed and give z-index

--- a/src/components/video-banner.module.css
+++ b/src/components/video-banner.module.css
@@ -15,4 +15,5 @@
 	/*purple background*/
 	background-color: rgba(39, 9, 35, .80);
 	overflow: hidden;
+	margin-top: 10vh;
 }
