--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -38,6 +38,9 @@ h2 {
 	color: black;
 	width: 100%;
 	height: 10vh;
+	position: fixed;
+	background-color: white;
+	z-index: 10;
 }
 
 .logo {
